--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -2,6 +2,7 @@
     <div class="toolbar">
         <div class="timer right">{{pomodoroTime}}</div>
         <button class="button right toolbar-button" (click)="togglePomodoroOpen()">Licznik</button>
+        <button class="button right toolbar-button" (click)="openLabelsManager()">Etykiety</button>
     </div>
 
     <div class="app-content">
