--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,7 +13,7 @@
       <div class="filter-group">
         <label class="filter-label">Z datą zakończenia</label>
         <input class="filter-value" type='checkbox' 
-        [checked]="model.getFilter().isWithEndDate()" (change)="model.getFilter().setWithEndDate($event)">
+        [checked]="model.getFilter().isWithEndDate()" (change)="model.getFilter().setWithEndDate($event.target.checked)">
       </div>
 
       <div class="filter-group">
