--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -9,131 +9,169 @@
             <mat-expansion-panel-header class="form-group-header">
                 Nazwa
             </mat-expansion-panel-header>
-            <input type="text" class="form-control" id="project-name" name='name'
-            [ngModel]='model.getProject().getName()' (ngModelChange)="model.getProject().setName($event)"
-            (keyup.enter)="updateProject()" (focusout)="updateProject()">
-            <div *ngIf="!model.isNameValid() && model.isNameChanged()"
-            class="invalid-feedback">Nazwa nie może być pusta</div>
+            <ng-container [ngTemplateOutlet]="project_name"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="model.getProject().getDescription()!=null">
             <mat-expansion-panel-header class="form-group-header">
                 Opis
             </mat-expansion-panel-header>
-            <textarea class="form-control" id="project-description" name="description" rows="4"
-            [ngModel]='model.getProject().getDescription()' (ngModelChange)="model.getProject().setDescription($event)"
-            (keyup.enter)="updateProject()" (focusout)="updateProject()"></textarea>
-            
+            <ng-container [ngTemplateOutlet]="project_description"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="true">
             <mat-expansion-panel-header class="form-group-header">
                 Typ
             </mat-expansion-panel-header>
-            <select class="form-control" id="project-type" name="type"
-            [ngModel]='model.getProject().getType()' (ngModelChange)="model.getProject().setType($event)"
-            (change)="updateProject()">
-                <option [ngValue]="projectType.DEFAULT">Nieokreślony</option>
-                <option [ngValue]="projectType.SMALL">Mały</option>
-                <option [ngValue]="projectType.MEDIUM">Średni</option>
-                <option [ngValue]="projectType.BIG">Duży</option>
-            </select>
+            <<ng-container [ngTemplateOutlet]="project_type"></ng-container>
         </mat-expansion-panel>
     
         <mat-expansion-panel class="form-group" [expanded]="true">
             <mat-expansion-panel-header class="form-group-header">
                 Stan
             </mat-expansion-panel-header>
-            <select class="form-control" id="project-status" name="status"
-            [ngModel]='model.getProject().getStatus()' (ngModelChange)="model.getProject().setStatus($event)"
-            (change)="updateProject()">
-                <option [ngValue]="status.STARTED">Aktywny</option>
-                <option [ngValue]="status.ENDED">Zakończony</option>
-                <option [ngValue]="status.CANCELED">Anulowany</option>
-                <option [ngValue]="status.AWAITING">Oczekujący</option>
-            </select>
+            <ng-container [ngTemplateOutlet]="project_status"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="model.getProject().getStartDate()!=null">
             <mat-expansion-panel-header class="form-group-header">
                 Data początkowa
             </mat-expansion-panel-header>
-            <div class="datepicker-container">
-                <input class='form-control' id="project-start-date" name="start-date" [matDatepicker]="startDatePicker"  
-                [ngModel]='model.getProject().getStartDate()' (ngModelChange)="model.getProject().setStartDate($event)" 
-                (dateChange)="updateProject()">
-                <mat-datepicker-toggle [for]="startDatePicker" class='datepicker'></mat-datepicker-toggle>
-                <mat-datepicker #startDatePicker></mat-datepicker>
-            </div>  
+            <ng-container [ngTemplateOutlet]="project_start_date"></ng-container>
         </mat-expansion-panel>
     
         <mat-expansion-panel class="form-group" [expanded]="model.getProject().getEndDate()!=null">
             <mat-expansion-panel-header class="form-group-header">
                 Data końcowa
             </mat-expansion-panel-header>
-            <div class="datepicker-container">
-                <input matInput class='form-control' id="project-end-date" name="end-date" [matDatepicker]="endDatePicker"
-                [ngModel]='model.getProject().getEndDate()' (ngModelChange)="model.getProject().setEndDate($event)"
-                (dateChange)="updateProject()">
-                <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
-                <mat-datepicker #endDatePicker></mat-datepicker>
-            </div>
-            <div *ngIf="!model.isEndDateValid() && model.isEndDateChanged()"
-            class="invalid-feedback">Data końcowa nie może być wcześniejsza niż początkowa</div>
+            <ng-container [ngTemplateOutlet]="project_end_date"></ng-container>
         </mat-expansion-panel>
 
         <mat-expansion-panel class="form-group" [expanded]="model.getProject().getStages().length > 0">
             <mat-expansion-panel-header class="form-group-header">
                 Etapy
             </mat-expansion-panel-header>
-            <div class="list border" id="stages-list">
-                <div *ngFor="let stage of model.getProject().getStages()" class="stage-list-item list-item block transparent-border" >
-                    <div class="stage-main">
-                        <div class="list-item-value">{{stage.getName()}}</div>
-                        <div class="stage-info-icons">
-                            <div *ngIf="stage.getDescription()!=null" class="task-description-icon info-icon"
-                                tooltip="{{stage.getDescription()}}" autoplacement="true" placement="bottom">
-                            </div>
-  
-                            <div *ngIf="stage.getEndDate()!=null" class="task-enddate-icon info-icon"
-                                tooltip="{{getDateText(stage.getEndDate())}}" autoplacement="true" placement="bottom">
-                            </div>
-                            <!-- TODO: gdzies można poinformować o stanie -->
-                            
-                        </div>
-                    </div> 
-                    <div class="list-item-options" 
-                        (click)='onStageMenuClick($event, stage)'
-                        [matMenuTriggerFor]="stageMenu">
-                        <!-- TODO: spróbować przenieść to menu gdzieś indziej -->
-                        <mat-menu #stageMenu="matMenu">
-
-                            <ng-template matMenuContent >
-                                <button mat-menu-item (click)="onEditStage(stage)">
-                                    Edytuj
-                                  </button>
-                                  <button mat-menu-item (click)="onRemoveStage(stage)">
-                                    Usuń
-                                  </button>
-                            </ng-template>
-                          </mat-menu>
-                        ...
-                    </div>
-                </div>
-                <div *ngIf="model.isAddingStageMode()" >
-                    <input type="text" class="form-control" id="new-stage-name" (keyup)="handleAddingNewStageKeyUp($event)" name="new-state-name"
-                        [ngModel]="model.getNewStageName()" (ngModelChange)="model.setNewStageName($event)">
-                    <div class="buttons-container">
-                        <button class="button small-button insert-button" id="save-subtask-button" 
-                        (click)="addNewStage()">Zapisz</button>
-                        <button class="button small-button insert-button" id="cancel-subtask-button"
-                        (click)="closeAddingNewStage()">Anuluj</button>
-                    </div>
-                </div>
-                <button class="button border" (click)='onCreateStageClick()'
-                    *ngIf="!model.isAddingStageMode()">Dodaj etap</button>
-            </div>
+            <ng-container [ngTemplateOutlet]="project_stages"></ng-container>
         </mat-expansion-panel>
     </form>
 </div>
 
+<ng-template #project_name>
+    <input type="text" class="form-control" id="project-name" name='name'
+            [ngModel]='model.getProject().getName()' (ngModelChange)="model.getProject().setName($event)"
+            (keyup.enter)="updateProject()" (focusout)="updateProject()">
+    <div *ngIf="!model.isNameValid() && model.isNameChanged()"
+    class="invalid-feedback">Nazwa nie może być pusta</div>
+</ng-template>
+
+<ng-template #project_description>
+    <textarea class="form-control" id="project-description" name="description" rows="4"
+        [ngModel]='model.getProject().getDescription()' (ngModelChange)="model.getProject().setDescription($event)"
+        (keyup.enter)="updateProject()" (focusout)="updateProject()">
+    </textarea>
+</ng-template>
+
+<ng-template #project_type>
+    <select class="form-control" id="project-type" name="type"
+        [ngModel]='model.getProject().getType()' (ngModelChange)="model.getProject().setType($event)"
+        (change)="updateProject()">
+        <option [ngValue]="projectType.DEFAULT">Nieokreślony</option>
+        <option [ngValue]="projectType.SMALL">Mały</option>
+        <option [ngValue]="projectType.MEDIUM">Średni</option>
+        <option [ngValue]="projectType.BIG">Duży</option>
+    </select>
+</ng-template>
+
+<ng-template #project_status>
+    <select class="form-control" id="project-status" name="status"
+        [ngModel]='model.getProject().getStatus()' (ngModelChange)="model.getProject().setStatus($event)"
+        (change)="updateProject()">
+        <option [ngValue]="status.STARTED">Aktywny</option>
+        <option [ngValue]="status.ENDED">Zakończony</option>
+        <option [ngValue]="status.CANCELED">Anulowany</option>
+        <option [ngValue]="status.AWAITING">Oczekujący</option>
+    </select>
+</ng-template>
+
+<ng-template #project_start_date>
+    <div class="datepicker-container">
+        <input class='form-control' id="project-start-date" name="start-date" [matDatepicker]="startDatePicker"  
+        [ngModel]='model.getProject().getStartDate()' (ngModelChange)="model.getProject().setStartDate($event)" 
+        (dateChange)="updateProject()">
+        <mat-datepicker-toggle [for]="startDatePicker" class='datepicker'></mat-datepicker-toggle>
+        <mat-datepicker #startDatePicker></mat-datepicker>
+    </div>  
+</ng-template>
+
+<ng-template #project_end_date>
+    <div class="datepicker-container">
+        <input matInput class='form-control' id="project-end-date" name="end-date" [matDatepicker]="endDatePicker"
+        [ngModel]='model.getProject().getEndDate()' (ngModelChange)="model.getProject().setEndDate($event)"
+        (dateChange)="updateProject()">
+        <mat-datepicker-toggle [for]="endDatePicker" class="datepicker"></mat-datepicker-toggle>
+        <mat-datepicker #endDatePicker></mat-datepicker>
+    </div>
+    <div *ngIf="!model.isEndDateValid() && model.isEndDateChanged()"
+    class="invalid-feedback">Data końcowa nie może być wcześniejsza niż początkowa</div>
+</ng-template>
+
+<ng-template #project_stages>
+    <div class="list border" id="stages-list">
+        <div *ngFor="let stage of model.getProject().getStages()" class="stage-list-item list-item block transparent-border" >
+            <ng-container [ngTemplateOutlet]="stage_item" [ngTemplateOutletContext]="{$implicit:stage}"></ng-container>
+        </div>
+        <div *ngIf="model.isAddingStageMode()" >
+            <ng-container [ngTemplateOutlet]="new_stage"></ng-container>
+        </div>
+        <button class="button border" (click)='onCreateStageClick()'
+            *ngIf="!model.isAddingStageMode()">Dodaj etap</button>
+    </div>
+</ng-template>
+
+<ng-template #stage_item let-stage>
+    <div class="stage-main">
+        <div class="list-item-value">{{stage.getName()}}</div>
+        <div class="stage-info-icons">
+            <div *ngIf="stage.getDescription()!=null" class="task-description-icon info-icon"
+                tooltip="{{stage.getDescription()}}" autoplacement="true" placement="bottom">
+            </div>
+
+            <div *ngIf="stage.getEndDate()!=null" class="task-enddate-icon info-icon"
+                tooltip="{{getDateText(stage.getEndDate())}}" autoplacement="true" placement="bottom">
+            </div>
+        </div>
+    </div> 
+    <ng-container [ngTemplateOutlet]="stage_options" [ngTemplateOutletContext]="{$implicit:stage}"></ng-container>
+    
+</ng-template>
+
+<ng-template #stage_options let-stage>
+    <div class="list-item-options" 
+        (click)='onStageMenuClick($event, stage)'
+        [matMenuTriggerFor]="stageMenu">
+        <!-- TODO: spróbować przenieść to menu gdzieś indziej -->
+        <mat-menu #stageMenu="matMenu">
+
+            <ng-template matMenuContent >
+                <button mat-menu-item (click)="onEditStage(stage)">
+                    Edytuj
+                  </button>
+                  <button mat-menu-item (click)="onRemoveStage(stage)">
+                    Usuń
+                  </button>
+            </ng-template>
+          </mat-menu>
+        ...
+    </div>
+</ng-template>
+
+<ng-template #new_stage>
+    <input type="text" class="form-control" id="new-stage-name" (keyup)="handleAddingNewStageKeyUp($event)" name="new-state-name"
+                [ngModel]="model.getNewStageName()" (ngModelChange)="model.setNewStageName($event)">
+    <div class="buttons-container">
+        <button class="button small-button insert-button" id="save-subtask-button" 
+        (click)="addNewStage()">Zapisz</button>
+        <button class="button small-button insert-button" id="cancel-subtask-button"
+        (click)="closeAddingNewStage()">Anuluj</button>
+    </div>
+</ng-template>
