--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -4,131 +4,155 @@
   <div class="filter-controls">
     <input id="task-filter" class="filter border" placeholder="Wyszukaj zadanie"
     (input)='model.filterTasks($event.target.value)'>
-    <!-- TODO: kiedyć przyciski pozmianiać na przyciski -->
     <div class="button filter-button" id="task-filter-button" (click)="model.toggleFilterOpen()"></div>
   </div>
 
   <div class="filter-container" *ngIf="model.isFilterOpen()">
-
-    <div class="filter-group">
-      <label class="filter-label">Ważne</label>
-      <input class="filter-value" type="checkbox"
-      [checked]="model.getFilter().isImportant()" (change)="model.getFilter().setImportant($event.target.checked)">
-    </div>
-
-    <div class="filter-group">
-      <label class="filter-label">Z datą zakończenia</label>
-      <input class="filter-value" type='checkbox'
-      [checked]="model.getFilter().isWithEndDate()" (change)="model.getFilter().setWithEndDate($event.target.checked)">
-    </div>
-
-    <div class="filter-group">
-      <label class="filter-label">Stan</label>
-      <select class="filter-value"
-      [ngModel]="model.getFilter().getStatus()" (ngModelChange)="model.getFilter().setStatus($event)">
-        <option [ngValue]="null" >Wszystkie</option>
-        <option [ngValue]="status.STARTED">Aktywne</option>
-        <option [ngValue]="status.ENDED">Zakończone</option>
-        <option [ngValue]="status.AWAITING">Oczekujące</option>
-        <option [ngValue]="status.CANCELED">Zakończone</option>
-      </select>
-    </div>
-
-    <div class="filter-group">
-      <label class="filter-label">Etap</label>
-      <select class="filter-value"
-      [ngModel]="model.getFilter().getStage()" (ngModelChange)="model.getFilter().setStage($event)">
-        <option [ngValue]="null">Wszystkie</option>
-        <option *ngFor="let stage of model.getProject().getStages()" [ngValue]="stage">{{stage.getName()}}</option>
-      </select>
-    </div>
-
-    <div class="filter-group">
-      <label class="filter-label">Etykieta</label>
-    
-      <select class="filter-value"
-      [ngModel]="model.getFilter().getLabel()" (ngModelChange)="model.getFilter().setLabel($event)">
-          <option [ngValue]="null">Wszystkie</option>
-          <option *ngFor="let label of model.getLabels()" [ngValue]="label">{{label.getName()}}</option>
-      </select>
-    </div>
-
-    <div class="filter-buttons-container">
-      <button class="small-button button" (click)="clearFilter()">Wyczyść</button>
-    <button class="small-button button" (click)="searchFilter()">Szukaj</button>
-    </div>
+    <ng-container [ngTemplateOutlet]="filter_container"></ng-container>
   </div>
 
   <div id="tasks-list" class="list border">
-      <div *ngFor='let task of model.getTasks()' class="task-list-item list-item block transparent-border" 
-        (click)="onEditTask(task)">
-        <input type="checkbox"  class="task-checkbox"
-        [checked]="isTaskDone(task)" (change)="setTaskStatus(task, $event.target.checked)" 
-        (click)="checkBoxClick($event)"/>
-        <div class="task-main">
-          <div class="list-item-top">
-            <div class="list-item-value">{{task.getName()}}</div>
-            <mat-icon [ngClass]="({
-              'important-star': task.isImportant(),
-              'not-important-star': !task.isImportant(),
-              'star':true})" (click)="toggleTaskImportance(task, $event)">star</mat-icon>
-          </div>
-          <div class="task-info">
-            <div class="labels-container">
-              <div *ngFor="let label of task.getLabels()" class="label-item border">
-                {{label.getName()}}
-              </div>
-            </div>
-            
-            <div class="task-info-icon">
-              <div *ngIf="task.getDescription()!=null" class="task-description-icon info-icon"
-                tooltip="{{task.getDescription()}}" autoplacement="true" placement="bottom"></div>
-
-              <div *ngIf="task.getEndDate()!=null" class="task-enddate-icon info-icon"
-              tooltip="{{getEndDateText(task)}}" autoplacement="true" placement="bottom"></div>
-
-              <div *ngIf="task.getPriority()!=null" class="task-priority-icon info-icon"
-              >{{getPriorityText(task)}} </div>
-
-              <div *ngIf="task.getSubtasks().length != 0" class="info-icon task-subtask"
-              tooltip="{{getSubtasksList(task)}}" autoplacement="true" placement="bottom"
-              >
-                {{task.getNumberOfSubtaskWithStatus(status.ENDED)}} / {{task.getSubtasks().length}}
-              </div>
-            </div>
-
-            <!-- TODO: pomyśleć, jak to zrobić z etykietami. Lepiej będzie, Jeżeli będą wyświetlone w całości -->
-          </div>
-        </div>
-        
-        <div class="list-item-options" 
-          (click)='onTaskMenuClick($event, task)'
-          [matMenuTriggerFor]="menu"
-          >
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="onEditTask(task)">
-              Edytuj
-            </button>
-            <button mat-menu-item (click)="onRemoveTask()">
-              Usuń
-            </button>
-          </mat-menu>
-          ...
-        </div>
-      </div>
-
-      <div *ngIf="model.isAddingTaskMode()" >
-        <input type="text" class="form-control" id="new-task-name" (keyup)="handleAddingNewTaskKeyUp($event)"
-        [ngModel]="model.getNewTaskName()" (ngModelChange)="model.setNewTaskName($event)">
-        <div class="buttons-container">
-            <button class="button small-button insert-button" id="save-subtask-button" 
-            (click)="addNewTask()">Zapisz</button>
-            <button class="button small-button insert-button" id="cancel-subtask-button"
-            (click)="closeAddingNewTask()">Anuluj</button>
-        </div>
-      </div>
-
+      <ng-container [ngTemplateOutlet]="tasks_list"></ng-container>
   </div>
+  
   <button class="button border" (click)='onCreateTaskClick()'
-  *ngIf="model.getProject().getId()!=null && !model.isAddingTaskMode()">Dodaj zadanie</button>
+    *ngIf="model.getProject().getId()!=null && !model.isAddingTaskMode()">Dodaj zadanie</button>
 </div>
+
+
+<ng-template #filter_container>
+  <div class="filter-group">
+    <label class="filter-label">Ważne</label>
+    <input class="filter-value" type="checkbox"
+    [checked]="model.getFilter().isImportant()" (change)="model.getFilter().setImportant($event.target.checked)">
+  </div>
+
+  <div class="filter-group">
+    <label class="filter-label">Z datą zakończenia</label>
+    <input class="filter-value" type='checkbox'
+    [checked]="model.getFilter().isWithEndDate()" (change)="model.getFilter().setWithEndDate($event.target.checked)">
+  </div>
+
+  <div class="filter-group">
+    <label class="filter-label">Stan</label>
+    <select class="filter-value"
+    [ngModel]="model.getFilter().getStatus()" (ngModelChange)="model.getFilter().setStatus($event)">
+      <option [ngValue]="null" >Wszystkie</option>
+      <option [ngValue]="status.STARTED">Aktywne</option>
+      <option [ngValue]="status.ENDED">Zakończone</option>
+      <option [ngValue]="status.AWAITING">Oczekujące</option>
+      <option [ngValue]="status.CANCELED">Zakończone</option>
+    </select>
+  </div>
+
+  <div class="filter-group">
+    <label class="filter-label">Etap</label>
+    <select class="filter-value"
+    [ngModel]="model.getFilter().getStage()" (ngModelChange)="model.getFilter().setStage($event)">
+      <option [ngValue]="null">Wszystkie</option>
+      <option *ngFor="let stage of model.getProject().getStages()" [ngValue]="stage">{{stage.getName()}}</option>
+    </select>
+  </div>
+
+  <div class="filter-group">
+    <label class="filter-label">Etykieta</label>
+  
+    <select class="filter-value"
+    [ngModel]="model.getFilter().getLabel()" (ngModelChange)="model.getFilter().setLabel($event)">
+        <option [ngValue]="null">Wszystkie</option>
+        <option *ngFor="let label of model.getLabels()" [ngValue]="label">{{label.getName()}}</option>
+    </select>
+  </div>
+
+  <div class="filter-buttons-container">
+    <button class="small-button button" (click)="clearFilter()">Wyczyść</button>
+  <button class="small-button button" (click)="searchFilter()">Szukaj</button>
+  </div>
+</ng-template>
+
+<ng-template #tasks_list>
+  <div *ngFor='let task of model.getTasks()' class="task-list-item list-item block transparent-border" 
+        (click)="onEditTask(task)">
+    <ng-container [ngTemplateOutlet]="task_item" [ngTemplateOutletContext]="{$implicit:task}"></ng-container>
+    
+    
+  </div>
+
+  <div *ngIf="model.isAddingTaskMode()" >
+    <ng-container [ngTemplateOutlet]="new_task"></ng-container>
+  </div>
+</ng-template>
+
+<ng-template #task_item let-task>
+  <input type="checkbox"  class="task-checkbox"
+    [checked]="isTaskDone(task)" (change)="setTaskStatus(task, $event.target.checked)" 
+    (click)="checkBoxClick($event)"/>
+  <div class="task-main">
+    <div class="list-item-top">
+      <div class="list-item-value">{{task.getName()}}</div>
+      <mat-icon [ngClass]="({
+        'important-star': task.isImportant(),
+        'not-important-star': !task.isImportant(),
+        'star':true})" (click)="toggleTaskImportance(task, $event)">star</mat-icon>
+    </div>
+    <div class="task-info">
+      <div class="labels-container">
+        <div *ngFor="let label of task.getLabels()" class="label-item border">
+          {{label.getName()}}
+        </div>
+      </div>
+      
+      <div class="task-info-icon">
+        <ng-container [ngTemplateOutlet]="task_details" [ngTemplateOutletContext]="{$implicit:task}"></ng-container>
+      </div>
+    </div>
+  </div>
+  <ng-container [ngTemplateOutlet]="item_options" [ngTemplateOutletContext]="{$implicit: task}"></ng-container>
+</ng-template>
+
+<ng-template #task_details let-task>
+  <div *ngIf="task.getDescription()!=null" class="task-description-icon info-icon"
+          tooltip="{{task.getDescription()}}" autoplacement="true" placement="bottom">
+  </div>
+
+  <div *ngIf="task.getEndDate()!=null" class="task-enddate-icon info-icon"
+    tooltip="{{getEndDateText(task)}}" autoplacement="true" placement="bottom">
+  </div>
+
+  <div *ngIf="task.getPriority()!=null" class="task-priority-icon info-icon">
+    {{getPriorityText(task)}} 
+  </div>
+
+  <div *ngIf="task.getSubtasks().length != 0" class="info-icon task-subtask"
+    tooltip="{{getSubtasksList(task)}}" autoplacement="true" placement="bottom">
+    {{task.getNumberOfSubtaskWithStatus(status.ENDED)}} / {{task.getSubtasks().length}}
+  </div>
+</ng-template>
+
+<ng-template #item_options let-task>
+  <div class="list-item-options" 
+      (click)='onTaskMenuClick($event, task)'
+      [matMenuTriggerFor]="menu"
+      >
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="onEditTask(task)">
+          Edytuj
+        </button>
+        <button mat-menu-item (click)="onRemoveTask()">
+          Usuń
+        </button>
+      </mat-menu>
+      ...
+    </div>
+</ng-template>
+
+<ng-template #new_task>
+  <input type="text" class="form-control" id="new-task-name" (keyup)="handleAddingNewTaskKeyUp($event)"
+    [ngModel]="model.getNewTaskName()" (ngModelChange)="model.setNewTaskName($event)">
+    <div class="buttons-container">
+        <button class="button small-button insert-button" id="save-subtask-button" 
+        (click)="addNewTask()">Zapisz</button>
+        <button class="button small-button insert-button" id="cancel-subtask-button"
+        (click)="closeAddingNewTask()">Anuluj</button>
+    </div>
+</ng-template>
